[package]
name = "hoshiyomi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tonic = "0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.7.2"